--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A web app to show a random adive when needed. Built with Advice Slip API and Reactjs."
+    />
+    <meta
+      name="author"
+      content="Refaat Bitar"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lit Advice</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
